<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:visibility="visible">

    <TextView
        android:text="@string/faculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:password="false"
        android:visibility="visible"
        android:id="@+id/front"
        android:phoneNumber="false"
        android:layout_toStartOf="@+id/btnLogIn"
        android:layout_marginBottom="80dp"
        android:layout_alignBottom="@+id/speedName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw"
        android:id="@+id/speedName"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/front"
        android:layout_alignStart="@+id/front"
        android:layout_marginTop="165dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Log"
        android:id="@+id/btnLogIn"
        android:layout_below="@+id/speedName"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtFaculty"
        android:layout_alignBottom="@+id/front"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/btnLogIn"
        android:layout_alignStart="@+id/btnLogIn"
        android:inputType="textCapCharacters" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPassword"
        android:maxLength="10"
        android:password="true"
        android:layout_toEndOf="@+id/speedName"
        android:layout_above="@+id/btnLogIn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
