<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.complete.thesisdesignproject.SendSMS">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/front"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/speedName"
        android:id="@+id/speedName"
        android:layout_toStartOf="@+id/front"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/front"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/speeds"
        android:entries="@array/speed"
        android:layout_toEndOf="@+id/speedName"
        android:layout_below="@+id/front"
        android:layout_alignRight="@+id/timeMinutes"
        android:layout_alignEnd="@+id/timeMinutes"
        android:layout_alignLeft="@+id/front"
        android:layout_alignStart="@+id/front" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/timeName"
        android:id="@+id/time"
        android:layout_below="@+id/speeds"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeHours"
        android:entries="@array/timeHour"
        android:layout_below="@+id/speeds"
        android:layout_alignLeft="@+id/speeds"
        android:layout_alignStart="@+id/speeds"
        android:layout_alignBottom="@+id/timeMinutes" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeMinutes"
        android:entries="@array/timeMinute"
        android:layout_toEndOf="@+id/speedName"
        android:layout_alignLeft="@+id/front"
        android:layout_alignStart="@+id/front"
        android:layout_marginLeft="72dp"
        android:layout_below="@+id/speeds" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeSeconds"
        android:entries="@array/timeSecond"
        android:layout_toEndOf="@+id/front"
        android:layout_alignTop="@+id/timeHours"
        android:layout_toRightOf="@+id/front"
        android:layout_alignBottom="@+id/timeHours" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/temperatureName"
        android:id="@+id/temps"
        android:layout_toStartOf="@+id/timeMinutes"
        android:layout_above="@+id/temperatures"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temperatures"
        android:entries="@array/temperature"
        android:layout_toEndOf="@+id/temps"
        android:layout_above="@+id/button"
        android:layout_toRightOf="@+id/temps" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp" />
</RelativeLayout>
